@@ -11,7 +11,7 @@
         <version>1.7.1</version>
         <relativePath>../../..</relativePath>
     </parent>
-    <version>1.7.4</version>
+    <version>1.7.5</version>
 
     <!-- Dependencies -->
     <dependencies>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>dvk</groupId>
             <artifactId>api</artifactId>
-            <version>1.0.9</version>
+            <version>1.0.10</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.castor</groupId>
