@@ -26,7 +26,7 @@
         <dependency>
             <groupId>dvk</groupId>
             <artifactId>client</artifactId>
-            <version>1.7.4</version>
+            <version>1.7.5</version>
         </dependency>
         <dependency>
             <groupId>java</groupId>
